--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
 <head><title>Primera página</title></head>
-<body><p>Hola yago</p></body>
+<body><p>Hola yago2</p></body>
 </html>
